:bug: fix(form-ext.scss): Fix issue where toggle glyph was not hidden behind the toggle knob

--- a/src/components/form-ext.scss
+++ b/src/components/form-ext.scss
@@ -173,7 +173,7 @@ $generate-utility: should-generate-classes($FORMS-EXT);
                 line-height: 18px;
                 text-align: right;
                 top: 0;
-                width: 65%;
+                width: 55%;
                 font-size: 12px;
             }
 
